add image feature added

--- a/templates/trick.html.twig
+++ b/templates/trick.html.twig
@@ -6,9 +6,9 @@
 
 {% block javascripts %}
 <script src="{{ asset('assets/js/trick.js') }}"></script>
-<script src="{{ asset('assets/js/loadmore.js') }}" ></script>
+<script src="{{ asset('assets/js/loadmore.js') }}"></script>
 <script>
-    new ShowMoreShowLess(".element","#loadMore","Load More Comments","Show Less Comments", 3, 3);
+    new ShowMoreShowLess(".element", "#loadMore", "Load More Comments", "Show Less Comments", 3, 3);
 </script>
 {% endblock %}
 
@@ -19,10 +19,10 @@
         {% if app.user and app.user.isVerified == true %}
         <!--Message flash-->
         {% for message in app.flashes('success') %}
-            <div class="alert alert-success alert-dismissible fade show">
-                <strong>{{ message }}</strong>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+        <div class="alert alert-success alert-dismissible fade show">
+            <strong>{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         {% endfor %}
         <!--Manager button-->
         <div class="align-self-end">
@@ -46,108 +46,124 @@
 
 <section class="page-section portfolio d-flex flex-column py-5 shadow" id="trick-list">
     <!-- Portfolio Section Heading-->
+    {% if trick.videos[0] is defined and trick.images[0] is defined %}
     <h3 class="page-section-heading text-center text-uppercase text-primary mb-5" id="trick-list">
         Media
     </h3>
+    {% endif %}
+
     <!--Trick Media-->
     <div class="d-flex flex-row flex-wrap justify-content-center p-5">
-        {% for media in trick.media %}
+        {% for video in trick.videos %}
         <div class="col-lg-3 col-dm-4 col-sm-6 col p-2" style="max-width: 25rem; max-height: 335px;">
             <div class="card h-100 d-flex flex-column">
-                {% if media.type == "video" %}
-                {# style="background-image: url('{{ media.thumbnail }}')" #}
-                <a href="{{ media.content }}" class="rounded-top d-block" target="_blank">
-                    <img src="{{ media.thumbnail }}" width="100%">
+                <a href="{{ video.url }}" class="rounded-top d-block" target="_blank">
+                    <img src="{{ video.thumbnail }}" width="100%">
                 </a>
-
                 <div class="card-body">
                     <div class="d-flex justify-content-center">
                         <div class="d-flex">
                             <i class="fa-brands fa-youtube fa-2xl my-auto" style="color: #ff0000;"></i>
                             <h5 class="card-title my-auto mx-3">Video</h5>
                         </div>
-                        {% else %}
-                        <a href="{{ media.content }}" class="rounded-top" target="_blank">
-                            <img src="{{ media.content }}" class="card-img-top" alt="Vidéo Youtube" class="video" />
-                        </a>
-                        <div class="card-body">
-                            <div class="d-flex justify-content-center">
-                                <div class="d-flex">
-                                    <i class="fa fa-image fa-2xl my-auto" style='color: #fafafacc'></i>
-                                    <h5 class="card-title my-auto mx-3">Image</h5>
-                                </div>
-                                {% endif %}
-                                <!--   {% if app.user and app.user.isVerified == true %}
-                            <div class="d-flex justify-content-center">
-                                <button href="#" class="btn btn-home-grid my-auto rounded"
-                                    data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                    <i class="fa fa-trash" style='color: #fafafacc'></i>
-                                </button>
-                            </div>
-                    {% endif %}-->
-                            </div>
+                        {% if app.user and app.user.isVerified == true %}
+                        <div class="d-flex justify-content-center">
+                            <button href="#" class="btn btn-home-grid my-auto rounded" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <i class="fa fa-trash" style='color: #fafafacc'></i>
+                            </button>
                         </div>
+                        {% endif %}
                     </div>
-                </div>
-                {% endfor %}
-            </div>
-
-            <!--Trick description-->
-            <div class="container">
-                <h3 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-5" id="trick-list">
-                    Description
-                </h3>
-                <div class="container" style='color: #fafafacc'>
-                    <p>{{ trick.description}}</p>
-                </div>
-                <!-- Trick Informations-->
-                <div class="d-flex flex-wrap justify-content-center">
-                    <span class="badge bg-info p-3 m-3">{{ trick.category.name }}</span>
-                    <span class="badge bg-light p-3 m-3 text-dark">Le {{ trick.createdAt|date("d/m/Y") }}</span>
-                    {% if trick.updatedAt %}
-                    <span class="badge bg-success p-3 m-3"> {{ trick.updatedAt|date("d/m/Y") }}</span>
-                    {% endif %}
-
-                </div>
-                <hr>
-                {% if app.user and app.user.isVerified == true %}
-                <!-- Leave a comment -->
-                <div class="container py-4">
-                    <div class="d-flex justify-content-center">
-                        {{ form(commentForm) }}
-                    </div>
-                    <hr class="mt-4">
-                </div>
-                {% endif %}
-                <!-- comments-->
-                <div id="comment" class="mb-5">
-                    {% for comment in comments %}
-                    <div class="comment my-4 element">
-                        <div class="comment-body d-flex w-100" style='color: #fafafacc'>
-                            <div class="col-4 d-flex justify-content-between">
-                                <i class="fa fa-user-circle-o fa-4x my-auto"></i>
-                                <h5 class="m-auto">
-                                    {{ comment.author.username}}
-                                </h5>
-                            </div>
-                            <div class="col-8 bg-secondary rounded p-1">
-                                <p class="text-muted fw-bold mx-3">The {{ comment.createdAt|date("d/m/Y") }}</p>
-                                <p class="mx-3">
-                                    {{ comment.content }}
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-                <!-- Load more -->
-                <div class="d-flex justify-content-center align-items-center">
-                    <button class="btn btn-home-grid load mx-3 my-auto" id="loadMore" data-type="+" style="color: #fafafacc">
-                      <!--<i class="fa fa-spinner" style='color: #fafafacc'></i>-->
-                    </button>
                 </div>
             </div>
         </div>
+        {% endfor %}
+        {% if trick.images is defined %}
+        {% for image in trick.images %}
+        <div class="col-lg-3 col-dm-4 col-sm-6 col p-2" style="max-width: 25rem; max-height: 335px;">
+            <div class="card h-100 d-flex flex-column">
+                <a href="{{ asset('assets/uploads/images/'~ trick.images[0].path ) }}" class="rounded-top d-block"
+                    target="_blank">
+                    <img src="{{ asset('assets/uploads/images/'~ trick.images[0].path ) }}" width="100%">
+                </a>
+                <div class="card-body">
+                    <div class="d-flex justify-content-center">
+                        <div class="d-flex">
+                            <i class="fa fa-image fa-2xl my-auto" style='color: #fafafacc'></i>
+                            <h5 class="card-title my-auto mx-3">Image</h5>
+                        </div>
+                        {% if app.user and app.user.isVerified == true %}
+                        <div class="d-flex justify-content-center">
+                            <button href="#" class="btn btn-home-grid my-auto rounded" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                                <i class="fa fa-trash" style='color: #fafafacc'></i>
+                            </button>
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        {% endif %}
+    </div>
+
+    <!--Trick description-->
+    <div class="container">
+        <h3 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-5" id="trick-list">
+            Description
+        </h3>
+        <div class="container" style='color: #fafafacc'>
+            <p>{{ trick.description}}</p>
+        </div>
+        <!-- Trick Informations-->
+        <div class="d-flex flex-wrap justify-content-center">
+            <span class="badge bg-info p-3 m-3">{{ trick.category.name }}</span>
+            <span class="badge bg-light p-3 m-3 text-dark">Le {{ trick.createdAt|date("d/m/Y") }}</span>
+            {% if trick.updatedAt %}
+            <span class="badge bg-success p-3 m-3"> {{ trick.updatedAt|date("d/m/Y") }}</span>
+            {% endif %}
+        </div>
+        <hr>
+        {% if app.user and app.user.isVerified == true %}
+        <!-- Leave a comment -->
+        <div class="container py-4">
+            <div class="d-flex justify-content-center">
+                {{ form(commentForm) }}
+            </div>
+            <hr class="mt-4">
+        </div>
+        {% endif %}
+        <!-- comments-->
+        <div id="comment" class="mb-5">
+            {% for comment in comments %}
+            <div class="comment my-4 element">
+                <div class="comment-body d-flex w-100" style='color: #fafafacc'>
+                    <div class="col-4 d-flex justify-content-between">
+                        <i class="fa fa-user-circle-o fa-4x my-auto"></i>
+                        <h5 class="m-auto">
+                            {{ comment.author.username}}
+                        </h5>
+                    </div>
+                    <div class="col-8 bg-secondary rounded p-1">
+                        <p class="text-muted fw-bold mx-3">The {{ comment.createdAt|date("d/m/Y") }}</p>
+                        <p class="mx-3">
+                            {{ comment.content }}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <!-- Load more -->
+        {% if comments is not empty %}
+        <div class="d-flex justify-content-center align-items-center">
+            <button class="btn btn-lg btn-home-grid load mx-3 my-auto" id="loadMore" data-type="+" style="color: #fafafacc">
+                <!--<i class="fa fa-spinner" style='color: #fafafacc'></i>-->
+            </button>
+        </div>
+        {% endif %}
     </div>
 </section>
 
