--- a/templates/editTrick.html.twig
+++ b/templates/editTrick.html.twig
@@ -31,7 +31,8 @@
 
 <section class="page-section portfolio d-flex flex-column align-items-center p-5" id="add-trick">
 
-    <form action="..." method="post" enctype="multipart/form-data">
+{#
+   <form action="..." method="post" enctype="multipart/form-data">
 
         <!--Trick description-->
 
@@ -71,24 +72,13 @@
         </div>
 
         {% set myVal = 1 %}
-        {% for media in trick.media %}
-        {% if media.type == "video" %}
-
+        {% for video in trick.videos %}
         <div class="input-group input-group-lg mb-5">
             <button class="btn btn-outline-danger" type="button" id="button-addon-image">Delete video n°{{ myVal }}</button>
-            <input type="url" class="form-control rounded" name="url" placeholder="Edit a youtube trick url here" pattern="https://.*" aria-label="Example text with button addon" aria-describedby="button-addon1" value="{{ media.content}}">
+            <input type="url" class="form-control rounded" name="url" placeholder="Edit a youtube trick url here" pattern="https://.*" aria-label="Example text with button addon" aria-describedby="button-addon1" value="{{ video.url}}">
         </div>
         {% set myVal = myVal + 1 %}
-        {% endif %}
         {% endfor %}
-        
-        <!--   <div class="input-group input-group-lg mb-4 ">
-                <input type="url" class="form-control rounded" name="url" id="url" placeholder="Edit a youtube trick url here"
-                    pattern="https://.*" required>
-            </div>-->
-       
-        
-        
 
         <p class="mb-2" style='color: #fafafacc'>Add a new video url which should look like this :</p>
         <p class="mb-4" style='color: #fafafacc; font-style: italic;'>https://www.youtube.com/watch?v=fNPQTlEKkJk</p>
@@ -106,21 +96,21 @@
 
         <p class="mb-4" style='color: #fafafacc'>Add a new {{ trick.name }} featured image in 16/9 format :</p>
 
-        {% for media in trick.media %}
-        {% if media.isFeaturedImage %}
+        {% for image in trick.images %}
+        {% if image.isFeatured %}
         <div class="input-group input-group-lg mb-5">
-            <input class="form-control pl-0" type="file" id="formFile" value="{{ media.content }}">
+            <input class="form-control pl-0" type="file" id="formFile" value="{{ image.path }}">
         </div>
         {% endif %}
         {% endfor %}
 
         {% set myVal2 = 1 %}
-        {% for media in trick.media %}
-        {% if (media.type == "image") and (media.isFeaturedImage == false) %}
+        {% for image in trick.images %}
+        {% if image.isfeatured == false %}
         <p class="mb-4" style='color: #fafafacc'>Edit {{ trick.name }} images in 16/9 format :</p>
         <div class="input-group input-group-lg mb-5">
             <button class="btn btn-outline-danger" type="button" id="inputGroupFileAddon03">Delete image n° {{ myVal2 }} </button>
-            <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03" aria-label="Upload" value="{{ media.content }}">
+            <input type="file" class="form-control" id="inputGroupFile03" aria-describedby="inputGroupFileAddon03" aria-label="Upload" value="{{ image.path }}">
         </div>
         {% set myVal2 = myVal2 + 1 %}
         {% endif %}
@@ -138,7 +128,100 @@
             </input>
         </div>
 
-    </form>
+    </form>  
+    #}
+        {{ form_start(trickForm, {'attr': {'class': 'w-100 p-5' }}) }}
+            <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
+                Edit Description
+            </h2>
+            <div class="form-group">
+                {{ form_row(trickForm.name, { 'attr':{'class' : 'form-control rounded'}}) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(trickForm.category) }}
+            </div>
+            <div class="form-group mt-5">
+                {{ form_row(trickForm.description, { 'attr':{'class' : 'form-control rounded'}}) }}
+            </div>
+            <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
+                Edit Videos
+            </h2>
+            <p style='color: #fafafacc'>
+                Your video url should look like this:
+            </p>
+            <p style='color: #fafafacc; font-style: italic;'>
+                https://www.youtube.com/watch?v=fNPQTlEKkJk
+            </p>
+            <ul class="videos p-0"  data-index="{{ trickForm.videos|length > 0 ? trickForm.videos|last.vars.name + 1 : 0 }}"
+            data-prototype="{{ form_row(trickForm.videos.vars.prototype)|e('html_attr') }}">
+                    {% set myVal = 1 %}
+                    {% for videoField in trickForm.videos %}
+                        <li>
+                            {{ form_label(trickForm.videos, 'Edit video n°'~ myVal , {'label_attr': {'class': 'text-light'}}) }}
+                            {{ form_row(videoField) }}
+                        </li>
+                    {% set myVal = myVal + 1 %}
+                    {% endfor %}
+            </ul>
+            <button type="button" class="add_item_link_video btn btn-outline-success btn-lg mt-1" data-collection-holder-class="videos">
+                Add a new video
+            </button>
+            <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
+                Edit Images
+            </h2>
+           {# <p style='color: #fafafacc'>
+                Select images in jpg/png and 16/9 format:
+            </p>
+            <ul class="images p-0"  data-index="{{ trickForm.images|length > 0 ? trickForm.images|last.vars.name + 1 : 0 }}"
+            data-prototype="{{ form_row(trickForm.images.vars.prototype)|e('html_attr') }}">
+                    {% set myVal2 = 1 %}
+                    {% for imageField in trickForm.images %}
+                        <li>
+                            {{ form_label(trickForm.images, 'Edit image n°'~ myVal2 , {'label_attr': {'class': 'text-light'}}) }}
+                            {{ form_row(imageField) }}
+                        </li>
+                    {% set myVal2 = myVal2 + 1 %}
+                    {% endfor %}
+            </ul> #}
+
+            <div class="d-flex flex-wrap justify-content-center">
+            {#{% if trick.images is defined %}
+            {% for image in trick.images %}
+            <div class="col-lg-3 col-dm-4 col-sm-6 col p-2" style="max-width: 25rem; max-height: 335px;">
+                <div class="card h-100 d-flex flex-column">
+                    <a href="{{ asset('assets/uploads/images/'~ image.path ) }}" class="rounded-top d-block"
+                        target="_blank">
+                        <img src="{{ asset('assets/uploads/images/'~ image.path ) }}" width="100%">
+                    </a>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-center">
+                            <div class="d-flex">
+                                <i class="fa fa-image fa-2xl my-auto" style='color: #fafafacc'></i>
+                                <h5 class="card-title my-auto mx-3">Image</h5>
+                            </div>
+                            {% if app.user and app.user.isVerified == true %}
+                            <div class="d-flex justify-content-center">
+                                <button href="#" class=" removePicture btn btn-home-grid my-auto rounded" data-picture-id = "{{ image.id }}">
+                                    <i class="fa fa-trash" style='color: #fafafacc'></i>
+                                </button>
+                            </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% endif %}#}
+            </div>
+
+
+            <button type="button" class="add_item_link_image btn btn-outline-success btn-lg mt-1" data-collection-holder-class="images">
+                Add a new image
+            </button>
+            <div class="d-flex justify-content-center m5">
+                {{ form_row(trickForm.save) }} 
+            </div>
+        {{ form_end(trickForm) }}
 
 </section>
 
