--- a/templates/addTrick.html.twig
+++ b/templates/addTrick.html.twig
@@ -22,13 +22,13 @@
         <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
             Add Description
         </h2>
-        <div class="form-group">
+        <div class="form-group mb-4">
             {{ form_row(trickForm.name, { 'attr':{'class' : 'form-control rounded'}}) }}
         </div>
-        <div class="form-group">
+        <div class="form-group mb-4">
             {{ form_row(trickForm.category, {'attr':{'class' : 'rounded w-100'}}) }}
         </div>
-        <div class="form-group mt-4">
+        <div class="form-group">
             {{ form_row(trickForm.description, { 'attr':{'class' : 'form-control rounded'}}) }}
         </div>
         <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
