edit page and edit controller update

--- a/templates/editTrick.html.twig
+++ b/templates/editTrick.html.twig
@@ -91,7 +91,7 @@
                                         </div>
                                         {% if app.user and app.user.isVerified == true %}
                                         <div class="d-flex justify-content-center">
-                                            <button class="btn btn-home-grid my-auto rounded">
+                                            <button type="button" class="btn btn-home-grid my-auto rounded">
                                                 <i class="fa fa-trash" style='color: #fafafacc'></i>
                                             </button>
                                         </div>
