edit trick feature added

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -2976,7 +2976,7 @@ textarea.form-control-lg {
 .input-group-lg>.form-select,
 .input-group-lg>.input-group-text,
 .input-group-lg>.btn {
-  padding: 0.5rem 1rem;
+  /*padding: 0.5rem 1rem;*/
   font-size: 1.25rem;
   border-radius: 0.75rem;
 }
@@ -7581,6 +7581,10 @@ fieldset:disabled .btn {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.text-grey {
+  color: #fafafacc !important;
 }
 
 .vr {
