--- a/templates/trick.html.twig
+++ b/templates/trick.html.twig
@@ -28,11 +28,11 @@
         <div class="align-self-end">
             <a href="{{ path('trick_edit', {"slug": trick.slug }) }}"
                 class="btn btn-home-grid mx-3 my-auto rounded shadow-lg">
-                <i class="fa fa-pen fa-xl p-1" style='color: #fafafacc'></i>
+                <i class="fa fa-pen fa-xl p-1 text-warning" style='color: #fafafacc'></i>
             </a>
             <button class="btn btn-home-grid my-auto rounded shadow-lg" data-bs-toggle="modal"
                 data-bs-target="#exampleModal">
-                <i class="fa fa-trash fa-xl p-1" style='color: #fafafacc'></i>
+                <i class="fa fa-trash fa-xl p-1 text-danger" style='color: #fafafacc'></i>
             </button>
         </div>
         {% endif %}
