--- a/public/assets/css/trick.css
+++ b/public/assets/css/trick.css
@@ -3,8 +3,8 @@ body {
 }
 
 .btn-home-grid {
-    background: linear-gradient(#212529, #212529) padding-box,
-        linear-gradient(to right, var(--bs-secondary), #99deff) border-box;
+    background: linear-gradient(var(--bs-secondary), var(--bs-secondary)) padding-box,
+        linear-gradient(to right, var(--bs-secondary), #99deff ) border-box;
     background-color: #343a40;
     border: 4px solid transparent;
     text-decoration: none;
@@ -60,7 +60,7 @@ form {
     max-width: 800px !important;
 }
 
-.form-control {
+/*.form-control {
     background: #1a252f;
     color: rgba(255, 255, 255, 0.8) !important;
     font-size: 14px;
@@ -75,7 +75,27 @@ form {
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
-}
+}*/
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: rgba(255, 255, 255, 0.8) !important;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid var(--bs-gray);
+    border-bottom: 1px solid #99deff;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  }
+
 
 ::placeholder {
     color: white !important;
