close #13, add delete trick and media feature + some css modification

--- a/templates/addTrick.html.twig
+++ b/templates/addTrick.html.twig
@@ -37,7 +37,7 @@
         <p class="text-warning m-0">
             Your video url should look like this:
         </p>
-        <p class="text-warning m-0">
+        <p class="text-warning mt-0">
             https://www.youtube.com/watch?v=fNPQTlEKkJk
         </p>
         <ul class="videos p-0"  data-index="{{ trickForm.videos|length > 0 ? trickForm.videos|last.vars.name + 1 : 0 }}"
