--- a/templates/editTrick.html.twig
+++ b/templates/editTrick.html.twig
@@ -31,86 +31,86 @@
 
 <section class="page-section portfolio d-flex flex-column align-items-center" id="add-trick">
 
-        {{ form_start(trickForm, {'attr': {'class': 'w-100 p-5' }}) }}
-            <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
-                Edit Description
-            </h2>
-            <div class="form-group mb-4">
-                {{ form_row(trickForm.name, { 'attr':{'class' : 'form-control rounded'}}) }}
-            </div>
-            <div class="form-group mb-4">
-                {{ form_row(trickForm.category) }}
-            </div>
-            <div class="form-group">
-                {{ form_row(trickForm.description, { 'attr':{'class' : 'form-control rounded'}}) }}
-            </div>
-            <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
-                Edit Videos
-            </h2>
-            <p class="text-warning m-0">
-                Your video url should look like this:
-            </p>
-            <p class="text-warning font-italic m-0">
-                https://www.youtube.com/watch?v=fNPQTlEKkJk
-            </p>
-            <ul class="videos p-0"  data-index="{{ trickForm.videos|length > 0 ? trickForm.videos|last.vars.name + 1 : 0 }}"
-            data-prototype="{{ form_row(trickForm.videos.vars.prototype)|e('html_attr') }}">
-                    {% set myVal = 1 %}
-                    {% for videoField in trickForm.videos %}
-                        <li>
-                            {{ form_label(trickForm.videos, 'Edit video n°'~ myVal , {'label_attr': {'class': 'text-light'}}) }}
-                            {{ form_row(videoField) }}
-                        </li>
-                    {% set myVal = myVal + 1 %}
-                    {% endfor %}
-            </ul>
-            <button type="button" class="add_item_link_video btn btn-outline-success btn-lg mt-1" data-collection-holder-class="videos">
-                Add a new video
-            </button>
-            <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
-                Edit Images
-            </h2>
-           <p class="text-warning m-0">
-                Select images in jpg/png and 16/9 format:
-            </p>
-            <ul class="images p-0"  data-index="{{ trickForm.images|length > 0 ? trickForm.images|last.vars.name + 1 : 0 }}"
-            data-prototype="{{ form_row(trickForm.images.vars.prototype)|e('html_attr') }}">
-                    
-                    {% set myVal2 = 1 %}
-                    {% for imageField in trickForm.images  %}
-                    <li>
-                        {% if imageField.vars["data"].path is not null %}
-                        <div class="col-6 p-2" style="max-width: 25rem; max-height: 335px;">
-                            <div class="card h-100 d-flex flex-column">
-                                <a href="{{ asset('assets/uploads/images/'~ imageField.vars["data"].path ) }}" class="rounded-top d-block"
-                                    target="_blank">
-                                    <img src="{{ asset('assets/uploads/images/'~ imageField.vars["data"].path ) }}" width="100%">
-                                </a>
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-center">
-                                        <div class="d-flex">
-                                            <i class="fa fa-image fa-2xl my-auto" class="text-grey"></i>
-                                            <h5 class="card-title my-auto mx-3">Image n°{{myVal2}}</h5>
-                                        </div>
-                                    </div>
-                                </div>
+    {{ form_start(trickForm, {'attr': {'class': 'w-100 p-5' }}) }}
+    <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
+        Edit Description
+    </h2>
+    <div class="form-group mb-4">
+        {{ form_row(trickForm.name, { 'attr':{'class' : 'form-control rounded'}}) }}
+    </div>
+    <div class="form-group mb-4">
+        {{ form_row(trickForm.category) }}
+    </div>
+    <div class="form-group">
+        {{ form_row(trickForm.description, { 'attr':{'class' : 'form-control rounded'}}) }}
+    </div>
+    <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
+        Edit Videos
+    </h2>
+    <p class="text-warning m-0">
+        Your video url should look like this:
+    </p>
+    <p class="text-warning font-italic m-0">
+        https://www.youtube.com/watch?v=fNPQTlEKkJk
+    </p>
+    <ul class="videos p-0" data-index="{{ trickForm.videos|length > 0 ? trickForm.videos|last.vars.name + 1 : 0 }}"
+        data-prototype="{{ form_row(trickForm.videos.vars.prototype)|e('html_attr') }}">
+        {% set myVal = 1 %}
+        {% for videoField in trickForm.videos %}
+        <li>
+            {{ form_label(trickForm.videos, 'Edit video n°'~ myVal , {'label_attr': {'class': 'text-light'}}) }}
+            {{ form_row(videoField) }}
+        </li>
+        {% set myVal = myVal + 1 %}
+        {% endfor %}
+    </ul>
+    <button type="button" class="add_item_link_video btn btn-outline-success btn-lg mt-1"
+        data-collection-holder-class="videos">
+        Add a new video
+    </button>
+    <h2 class="page-section-heading text-center text-uppercase text-primary mb-5 pt-4" id="trick-list">
+        Edit Images
+    </h2>
+    <p class="text-warning m-0">
+        Select images in jpg/png and 16/9 format:
+    </p>
+    <ul class="images p-0" data-index="{{ trickForm.images|length > 0 ? trickForm.images|last.vars.name + 1 : 0 }}"
+        data-prototype="{{ form_row(trickForm.images.vars.prototype)|e('html_attr') }}">
+        {% set myVal2 = 1 %}
+        {% for imageField in trickForm.images %}
+        <li>
+            {% if imageField.vars["data"].path is not null %}
+            <div class="col-6 p-2 item">
+                <div class="card h-100 d-flex flex-column">
+                    <a href="{{ asset('assets/uploads/images/'~ imageField.vars["data"].path ) }}"
+                        class="rounded-top d-block" target="_blank">
+                        <img src="{{ asset('assets/uploads/images/'~ imageField.vars["data"].path ) }}" width="100%">
+                    </a>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-center">
+                            <div class="d-flex">
+                                <i class="fa fa-image fa-2xl my-auto" class="text-grey"></i>
+                                <h5 class="card-title my-auto mx-3">Image n°{{myVal2}}</h5>
                             </div>
                         </div>
-                        {% endif %}
-                        {{ form_label(trickForm.images, 'Edit image n°'~ myVal2 , {'label_attr': {'class': 'text-light'}}) }}
-                        {{ form_row(imageField) }}
-                    </li>
-                    {% set myVal2 = myVal2 + 1 %}
-                    {% endfor %}
-            </ul>
-
-            <button type="button" class="add_item_link_image btn btn-outline-success btn-lg mt-1" data-collection-holder-class="images">
-                Add a new image
-            </button>
-            <div class="d-flex justify-content-center m5">
-                {{ form_row(trickForm.save) }} 
+                    </div>
+                </div>
             </div>
-        {{ form_end(trickForm) }}
+            {% endif %}
+            {{ form_label(trickForm.images, 'Edit image n°'~ myVal2 , {'label_attr': {'class': 'text-light'}}) }}
+            {{ form_row(imageField) }}
+        </li>
+        {% set myVal2 = myVal2 + 1 %}
+        {% endfor %}
+    </ul>
+    <button type="button" class="add_item_link_image btn btn-outline-success btn-lg mt-1"
+        data-collection-holder-class="images">
+        Add a new image
+    </button>
+    <div class="d-flex justify-content-center m5">
+        {{ form_row(trickForm.save) }}
+    </div>
+    {{ form_end(trickForm) }}
 
 </section>
 
