--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5172,6 +5172,11 @@ fieldset:disabled .btn {
   color: #fff;
 }
 
+.item {
+  max-width: 25rem; 
+  max-height: 335px;
+}
+
 .card {
   position: relative;
   display: flex;
@@ -12500,7 +12505,6 @@ html {
 }
 
 .footer {
-  padding-top: 5rem;
   background-color: #2c3e50;
   color: #fff;
 }
