--- a/templates/common/footer.html.twig
+++ b/templates/common/footer.html.twig
@@ -1,5 +1,5 @@
 <!-- Footer-->
-<footer class="footer text-center">
+<footer class="footer text-center pt-5">
     <div class="container mb-5">
         <div class="row">
             <!-- Footer Location-->
