--- a/templates/modals/image.modals.html.twig
+++ b/templates/modals/image.modals.html.twig
@@ -1,17 +1,16 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalImage{{image.id}}" tabindex="-1" aria-labelledby="modalImageLabel" aria-hidden="true">
     <div class="modal-dialog d-flex align-items-center">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Trick</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Delete Image</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                Are you sure to want to delete this trick?
+                Are you sure to want to delete this Image?
             </div>
-            <input type="hidden" id="trickId">
             <div class="modal-footer">
-                <form class="col-6" method="post" action="{{ path('trick_delete', {'id': trick.id}) }}">
-                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ trick.id) }}">
+                <form class="col-6" method="post" action="{{ path('media_delete_image', {'id': image.id}) }}">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ image.id) }}">
                     <button class="btn btn-outline-success w-100" >Sure !</button>
                 </form>
                 <button type="button" class="btn btn-outline-danger col-6" data-bs-dismiss="modal">Cancel</button>
@@ -19,4 +18,3 @@
         </div>
     </div>
 </div>
-
